tests/fixtures/partial_annotation.out
info: Typechecking...
error: Partial type signatures are not permitted in method definitions

        @ __ROOT__/tests/fixtures/partial_annotation.rb:6
      6 |  def f2(Integer x)
                 ^^^^^^^^^^^ all arguments and return value must be annotated

error: Partial type signatures are not permitted in method definitions

        @ __ROOT__/tests/fixtures/partial_annotation.rb:9
      9 |  def f3(Integer x, y, Integer z)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^ all arguments and return value must be annotated

error: Partial type signatures are not permitted in method definitions

        @ __ROOT__/tests/fixtures/partial_annotation.rb:12
     12 |  def f4(x) => Integer
                 ^^^^^^^^^^^^^^ all arguments and return value must be annotated

error: Partial type signatures are not permitted in method definitions

        @ __ROOT__/tests/fixtures/partial_annotation.rb:15
     15 |  def f5(x, y, Integer z) => Integer
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ all arguments and return value must be annotated

error: Partial type signatures are not permitted in method definitions

        @ __ROOT__/tests/fixtures/partial_annotation.rb:24
     24 |  def f8[U]
                 ^^^ all arguments and return value must be annotated
