tests/fixtures/partial_annotation.rb
def f1
end

def f2(Integer x)
end

def f3(Integer x, y, Integer z)
end

def f4(x) => Integer
end

def f5(x, y, Integer z) => Integer
end

def f6 => Integer
end

def f7(Integer x, Integer y) => Integer
end

def f8[U]
end
